<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/tapsell_dialog_header">

    <ir.tapsell.tapselldevelopersdk.styledview.StyledTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:gravity="right"
        android:padding="4dip"
        android:layout_margin="10dip"
        android:text="@string/report_message" />

    <ir.tapsell.tapselldevelopersdk.styledview.StyledSpinner
        android:id="@+id/dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_gravity="right|clip_vertical"
        android:gravity="right"
        android:layout_margin="10dip"/>

    <ir.tapsell.tapselldevelopersdk.styledview.StyledEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_margin="10dip"
        android:gravity="top|right"
        android:background="@drawable/rounded_border"
        android:padding="10dip"
        android:hint="@string/report_hint" />

    <ir.tapsell.tapselldevelopersdk.styledview.StyledButton
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:padding="10dip"
        android:textColor="@android:color/white"
        android:background="@drawable/button_open_orange"
        android:text="@string/send" />

</LinearLayout>